--- a/the-complete-js-course-2020-jonas-schmedtmann/6.asynchronous/asynchronous.html
+++ b/the-complete-js-course-2020-jonas-schmedtmann/6.asynchronous/asynchronous.html
@@ -7,28 +7,52 @@
     <title>Asynchronous JavaScript</title>
 </head>
 <body>
-    <h1>Asynchronous JavaScript</h1>
-    <script>
-      function getRecipe() {
-        // settimeut simulates the server
-        setTimeout(() => {
-          const recipeID = [523, 883, 432, 974];
-          console.log(recipeID);
+  <h1>Asynchronous JavaScript</h1>
+  <script>
+    // produce
+    const getIDs = new Promise((resolve, reject) => {
+      setTimeout(() => {
+        resolve([523, 883, 432, 974]);
+      }, 1500);
+    });
 
-          setTimeout(id => {
-            const recipe = {title: 'Fresh tomato pasta', publisher: 'Jonas'};
-            console.log(`${id}: ${recipe.title}`);
+    // produce
+    const getRecipe = recID => {
+      return new Promise((resolve, reject) => {
+        setTimeout(ID => {
+          const recipe = {title: 'Fresh tomato pasta', publisher: 'Jonas'};
+            resolve(`${ID}: ${recipe.title},${recipe.publisher}`);
+          }, 1500, recID);
+      })
+    };
 
-            setTimeout(publisher => {
-            const recipe2 = {title: 'Italian Pizza', publisher: 'Jonas'};
-            console.log(recipe2);
-            }, 1000, recipe.publisher);
-            
-          }, 1000, recipeID[2]); 
+    const getRelated = publisher => {
+      return new Promise ((resolve, reject) => {
+        setTimeout(pub => {
+          const recipe = {title: 'pizza', publisher: 'Jonas'};
+            resolve(`${recipe.title},${recipe.publisher}`);
+        }, 1000, publisher)
+      })
+    }
+// consume
+// chaining
+    getIDs
+    .then(IDs => {
+      console.log('then',IDs);
+      // this   getRecipe(IDs[2])  will return a promise, that if resolve gives us the id and the recipe name
+      return getRecipe(IDs[2]) 
+    })
+    .then(recipe => {
+      console.log('recipe',recipe);
+      return getRelated(recipe.publisher)
+    })
+    .then(recipe => {
+      console.log(recipe);
+    })
+    .catch(error => {
+      console.log('error!',error);
+    });
 
-        }, 1500);
-      }
-      getRecipe();
-    </script>
+  </script>
 </body>
 </html>
