--- a/5.curso-profesional-js-platzi/index.html
+++ b/5.curso-profesional-js-platzi/index.html
@@ -19,9 +19,10 @@
         <source src="./assets/BigBuckBunny.mp4" />
       </video>
 
-      <button>Play/Pause</button>
+      <button id="play-pause">Play/Pause</button>
+      <button id="unmute">Unmute</button>
     </main>
 
-    <script src="assets/index.js"></script>
+    <script type="module" src="assets/index.js"></script>
   </body>
 </html>
